argocd/apps/platform/network-policies/templates/cilium-health.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-health
spec:
  endpointSelector:
    matchLabels:
      reserved:health: ""
  ingress:
    - fromEntities:
        - host
        - remote-node
      icmps:
        - fields:
            - type: 8
              family: IPv4
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "4240"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
