argocd/apps/platform/network-policies/templates/cnpg-system.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-system
  namespace: cnpg-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: blog
            cnpg.io/cluster: postgres
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "9187"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: keycloak
            cnpg.io/cluster: keycloak-postgres
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "9187"
              protocol: TCP
