argocd/apps/platform/network-policies/templates/dashy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dashy
  namespace: dashy
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
