argocd/apps/platform/network-policies/templates/keycloak.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak
  namespace: keycloak
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: blog
            app.kubernetes.io/name: cloudflared
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "9187"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: data
            cnpg.io/cluster: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
