argocd/apps/platform/network-policies/templates/monitoring.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: monitoring
  namespace: monitoring
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEntities:
        - host
        - remote-node
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
            - port: "10250"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
