argocd/apps/platform/network-policies/templates/oauth2-proxy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
