argocd/apps/platform/network-policies/templates/sops.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sops
  namespace: sops
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
